removed weird sizes and fixed some weird flickers

--- a/src/components/Bundle/NoBundle/NoBundle.css
+++ b/src/components/Bundle/NoBundle/NoBundle.css
@@ -1,10 +1,10 @@
 .no-bundle-component {
-  width: 100%;
   height: 100%;
 
   display: flex;
   justify-content: center;
   align-items: center;
+  flex-grow: 1;
 
   .no-bundle-text {
     font-size: 21px;
