--- a/src/components/Content/Content.css
+++ b/src/components/Content/Content.css
@@ -1,6 +1,6 @@
 .bundle-view-wrapper {
+  flex-grow: 1;
   min-width: 570px;
-  width: 74.3%;
   padding: 0 40px 15px 40px;
   overflow-y: auto;
 }
