--- a/src/components/ResourceNavigation/index.css
+++ b/src/components/ResourceNavigation/index.css
@@ -1,6 +1,5 @@
 .resource-navigation {
-  min-width: 350px;
-  width: 25.7%;
+  width: 350px;
   height: 100vh;
   border-left: 1px solid #ECECEC;
   border-right: 1px solid #ECECEC;
