--- a/src/containers/Navigation/Navigation.css
+++ b/src/containers/Navigation/Navigation.css
@@ -1,5 +1,4 @@
 .navigation-wrapper {
   display: flex;
-  min-width: 920px;
-  width: 94.5%;
+  width: 100%;
 }
