--- a/src/containers/SideNavigation/index.css
+++ b/src/containers/SideNavigation/index.css
@@ -1,7 +1,6 @@
 .side-navigation {
   position: relative;
-  min-width: 80px;
-  width: 5.5%;
+  width: 80px;
   height: 100vh;
   background: #F8F8F8;
 }
